; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_open_picker.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_open_picker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MENU_ENUM_LABEL_FAVORITES = common dso_local global i32 0, align 4
@ACTION_OK_DL_CONTENT_LIST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i64, i64)* @action_ok_open_picker to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @action_ok_open_picker(i8* %0, i8* %1, i32 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  store i64 %4, i64* %10, align 8
  store i8* null, i8** %12, align 8
  %13 = call i32 @retro_assert(i32 0)
  %14 = load i8*, i8** %6, align 8
  %15 = load i8*, i8** %12, align 8
  %16 = load i32, i32* @MENU_ENUM_LABEL_FAVORITES, align 4
  %17 = call i32 @msg_hash_to_str(i32 %16)
  %18 = load i32, i32* %8, align 4
  %19 = load i64, i64* %9, align 8
  %20 = load i64, i64* %10, align 8
  %21 = load i32, i32* @ACTION_OK_DL_CONTENT_LIST, align 4
  %22 = call i32 @generic_action_ok_displaylist_push(i8* %14, i8* %15, i32 %17, i32 %18, i64 %19, i64 %20, i32 %21)
  store i32 %22, i32* %11, align 4
  %23 = load i8*, i8** %12, align 8
  %24 = call i32 @free(i8* %23)
  %25 = load i32, i32* %11, align 4
  ret i32 %25
}

declare dso_local i32 @retro_assert(i32) #1

declare dso_local i32 @generic_action_ok_displaylist_push(i8*, i8*, i32, i32, i64, i64, i32) #1

declare dso_local i32 @msg_hash_to_str(i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
